--- a/src/theme/DocSidebar/Desktop/ProductSwitcher/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/ProductSwitcher/styles.module.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .caret {
